Fixing of responsive slideshow

--- a/product.html
+++ b/product.html
@@ -141,61 +141,63 @@
                 </div>
 
                 <div class="image_container">
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-6d701480b0854b1e84149f3369f085cc.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-6d701480b0854b1e84149f3369f085cc.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6d701480b0854b1e84149f3369f085cc.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-6d701480b0854b1e84149f3369f085cc.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6d701480b0854b1e84149f3369f085cc.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-358dfec82e8047268ebd83464f142554.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-358dfec82e8047268ebd83464f142554.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-358dfec82e8047268ebd83464f142554.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-358dfec82e8047268ebd83464f142554.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-358dfec82e8047268ebd83464f142554.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
-                        <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" alt="Big Box">
-                                <noscript>
-                                    <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" alt="Big Box">
-                                </noscript>
-                            </figure>
+                        <ul class="inner">
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-119b0a9897bf42a499eb929b11f672a7.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-b56bad56a73f4bb5b8a52a72770fb17c.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-c77dacad3f7b461a9a009692ff5c054b.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-0410fc4bc95b457e962eed304021e2f2.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                       <li> <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-6d701480b0854b1e84149f3369f085cc.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-6d701480b0854b1e84149f3369f085cc.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6d701480b0854b1e84149f3369f085cc.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-6d701480b0854b1e84149f3369f085cc.jpg" alt="Big Box">
+                                                       <noscript>
+                                                           <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6d701480b0854b1e84149f3369f085cc.jpg" alt="Big Box">
+                                                       </noscript>
+                                                   </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-87b5d268080848cca6faf9f04cc0ae88.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-37559c8f231b43aa871c117fd0ed7161.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6bcd0c31756e4c05a9261af3836a2e20.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-6fbd49336bef4dfb80a99701b0f54d30.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                        <li><figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-358dfec82e8047268ebd83464f142554.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-358dfec82e8047268ebd83464f142554.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-358dfec82e8047268ebd83464f142554.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-358dfec82e8047268ebd83464f142554.jpg" alt="Big Box">
+                                                        <noscript>
+                                                            <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-358dfec82e8047268ebd83464f142554.jpg" alt="Big Box">
+                                                        </noscript>
+                                                    </figure></li>
+                       <li> <figure class="responsive" data-media="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/300/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" data-media440="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/500/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" data-media600="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" data-media1400="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/2000/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" alt="Big Box">
+                                                       <noscript>
+                                                           <img src="//dmb7ixdwya1nh.cloudfront.net/store/media/i/product/1000/0/196-a8d377ffca664ab9a29806b4358b41b9.jpg" alt="Big Box">
+                                                       </noscript>
+                                                   </figure></li>
+                        </ul>
                 </div>
 
 
