--- a/template.html
+++ b/template.html
@@ -3,21 +3,16 @@
 
 
 
-The Seriously Theme
-by A++
+The Seriously Theme for tictail
+by A++ / uli@aplusplus.org
 
-Enable Special features with html classes:
+
+
+Features activated via html classes:
 
 fun: Show Comic hands below the add to cart button
 fix-header: keep the logo and the nav floating on top
 
-
-example: <html lang="en" class="fun fix-header"> enables a comic hand and a fixed header … Simple, huh?
-
-    ▼
-    ▼
-    ▼
-    ▼
 
 }}
 <html lang="en" class="fix-header fun">
@@ -35,12 +30,7 @@ example: <html lang="en" class="fun fix-header"> enables a comic hand and a fixe
     </title>
     <link href="{{assets_url}}/shared/css/base.css" rel="stylesheet" type="text/css">
     <link href='//fonts.googleapis.com/css?family=Allan|Karla:400,700,400italic' rel='stylesheet' type='text/css'>
-    <style type="text/css">
-        <?php include('assets/css/seriously.css'); ?>
-    </style>
-
-
-
+    <link href='//' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="{{assets_url}}/shared/js/html5shiv.js"></script>
