referencing external assets from github pages

--- a/template.html
+++ b/template.html
@@ -6,6 +6,7 @@
 The Seriously Theme for tictail
 by A++ / uli@aplusplus.org
 
+if you want to customize it have a look at github: https://github.com/Aplusplus/SeriouslyTheme
 
 
 Features activated via html classes:
@@ -30,7 +31,7 @@ fix-header: keep the logo and the nav floating on top
     </title>
     <link href="{{assets_url}}/shared/css/base.css" rel="stylesheet" type="text/css">
     <link href='//fonts.googleapis.com/css?family=Allan|Karla:400,700,400italic' rel='stylesheet' type='text/css'>
-    <link href='//' rel='stylesheet' type='text/css'>
+    <link href='//aplusplus.github.io/SeriouslyTheme/assets/css/seriously.css' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="{{assets_url}}/shared/js/html5shiv.js"></script>
@@ -329,11 +330,7 @@ fix-header: keep the logo and the nav floating on top
 </footer>
 <div id="bg"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        if(typeof window.jQuery !== 'undefined') {
-            <?php include('assets/js/seriously.min.js'); ?>
-        }
-    </script>
+<script src="//aplusplus.github.io/SeriouslyTheme/assets/js/seriously.min.js"></script>
 
      <noscript>
         <style type="text/css">
