Spacing fix listing

--- a/template.html
+++ b/template.html
@@ -65,7 +65,7 @@ fix-header: keep the logo and the nav floating on top
         <ul id="nav">
             <li>
                 <a class="{{#about_page}}selected{{/about_page}}" href="{{store_url}}/page/about">
-                {{#lang}}About us{{/lang}}
+                {{#lang}}About{{/lang}}
                 </a>
             </li>
 
@@ -320,10 +320,10 @@ fix-header: keep the logo and the nav floating on top
 
             <div id="search_container">
                 {{search}}
-            </div><br>
+            </div><br><br>
 
             <a class="{{#about_page}}selected{{/about_page}}" href="{{store_url}}/page/about">
-            {{#lang}}About us{{/lang}}
+            {{#lang}}About{{/lang}}
             </a>
             {{#store_blog_url}}
                 <a href="{{store_blog_url}}" target="_blank">
