Cloud hostet assets

--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@ fix-header: keep the logo and the nav floating on top
     </title>
     <link href="{{assets_url}}/shared/css/base.css" rel="stylesheet" type="text/css">
     <link href='//fonts.googleapis.com/css?family=Allan|Karla:400,700,400italic' rel='stylesheet' type='text/css'>
-    <link href='//aplusplus.github.io/SeriouslyTheme/assets/css/seriously.css' rel='stylesheet' type='text/css'>
+    <link href='{{assets_url}}/85405/seriously.css' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="{{assets_url}}/shared/js/html5shiv.js"></script>
@@ -331,7 +331,7 @@ fix-header: keep the logo and the nav floating on top
 </footer>
 <div id="bg"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="//aplusplus.github.io/SeriouslyTheme/assets/js/plugins.js"></script>
+<script src="{{assets_url}}/85405/plugins.js"></script>
 <script type="text/javascript">
 /**
 * Seriously Tictail Theme Scripts
@@ -554,6 +554,8 @@ fix-header: keep the logo and the nav floating on top
 </html>
 
 <!--
+Designed and developed by Uli Schöberl
+
 Want to create your own Tictail theme?
 Check out the documentation at https://tictail.com/docs
 -->
