adding inline documentation of white bg option

--- a/template.html
+++ b/template.html
@@ -13,6 +13,7 @@ Features activated via html classes:
 
 fun: Show Comic hands below the add to cart button
 fix-header: keep the logo and the nav floating on top
+white: make the whole page white instead of light grey
 
 
 }}
