appending {{store_email}} to about page

--- a/template.html
+++ b/template.html
@@ -305,6 +305,8 @@ white: make the whole page white instead of light grey
         <h1>About</h1>
         <div class="html_content">
             {{store_description}}
+
+            <p>{{store_email}}</p>
         </div>
     </article>
 
