IE Bugs + mobile slideshow minifix

--- a/template.html
+++ b/template.html
@@ -40,6 +40,9 @@ white: make the whole page white instead of light grey
     <style type="text/css">
         .no-touch #product .social {background:none;}
         .no-touch #product .social .tictail_social_buttons {visibility:visible;margin-right:0;}
+        #bg {
+        background-image:none;
+        }
     </style>
     <![endif]-->
 </head>
